Modify first 8 screens

--- a/tablesoft-net/TableSoft/TableSoft/frmInicioEmpleado.resx
+++ b/tablesoft-net/TableSoft/TableSoft/frmInicioEmpleado.resx
@@ -118,7 +118,94 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox2.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picEstado.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAABGdBTUEAALGPC/xhBQAAEx1JREFUeF7t
+        nV3I5FYZx99bLwTFCy/0wvZKlIqKUpXSi4JgkbY3giBVtCiCSFvwSgqKKK0g2FbEWj+wLf3AwqviVkT7
+        uUvV2u13savd2nV3bVdaKouroO3FOL9snt0z2WeSk5kk5yT5P/DjfWfyMcnJ+c1zck6S2Rk6FouF6Ijj
+        J/6zOHzs5cVTBw8XPHrg+QJ7zTTmqS4nhiW78DZSxPPaa6/uIJcJFwvLsKy3TtEv2YW3kSKOTeSrwjqq
+        6xX9kl14GynqWTYpdzyhtkFZcTiyC28jxXr6ENBg3d5nim7JLryNFD59CmhIxP7JLryNFGdCc9GTpg/U
+        NO2X7MLbSHEm4ZBD3/BZ1c8X3ZFdeBspVumiF7Qtapb2R3bhbaRYxZNkCKrbIbohu/A2UpxmiM6YdSgb
+        9kN24W2kOM2m54J2qdo255IayO+H7MLbSHEaT446kM7LYLy3iZDV9YjtyS68jRQnadshg2TVdVRpK6Ky
+        YfdkF95Gis3GBWPG9/par4gnu/A2UrTPWDFZ0Ohz3aKZ7MLbyDmzaW9om2bjpuOO6i3thuzC28i5QXMP
+        MdpmqJAhJAS2keXVRN2c7OLokUOzZVvxQliP9xkeXX4m++B9xpTxxGpDdnHbLd9fzI07bv3B4nePPO5W
+        7G1gvd7nhezeebO77DawLzGfPQXuvOPHS498uWLJLjh47NgcYF/33PVztyJ3gcngfbbhLdcV7NvUjydf
+        YlWp2pJdzEXCvgU0EJGKwueF8F4f2TeE5unURZSEI4V9HELAEIS7d+/egr7lq8K+euUwBSThSOHAeZV1
+        ynjlMAUk4Qhh/4bORDnAPk/x2ErCkcG+Dd0MzYkpNksl4chg37zKORemmA0l4ciYcxY0ppYNJeGIYL/m
+        eC5Yhd7ZKR1jSTgi2C+vUs4RSbhKdjFFCdknDpZXIeeIlUm1nMbIrCVkvj88+OvF8VeeW7zy0rPZc+To
+        QbdCzhGvfHKCOrX/obujvigkoSQcJZSFV0a5IAkl4eSRhKtkF5Jw+kjCVbILSTh9JOEq2YUknD6ScJXs
+        QhJOH0m4SnYhCaePJFwlu5CE00cSrpJdSMLpIwlXyS4k4fSRhKtkF5Jw+kjCVbILSTh9JOEq2cWUJXz2
+        0HNiiSRcJbuYqoRiPEhCSSgSIwkloUiMJJSEIjGSUBKKxEhCSSgSIwkloUiMJJSEIjGSUBKKxEhCSSgS
+        IwkloUiMJJSEIjGSUBKKxEhCSSgSIwkloUiMJJSEIjGSUBKKxEhCSSgSIwkloUiMJJSEIjGScIISnvjn
+        kQJvmsgPSTgxCZHv90/csrhu9yJl7ZEgCSckoQn4+e/uLL54w87i+t2LJeIIkIQTkTAU8Es/fEOBRBwH
+        knACEnoCGrx314Pf1DlixkjCkUuIXPfvv8EVkEz4w7s+IwEzRxKOWEIJOA0k4UglRC6amRJw/EjCEUoo
+        AaeFJEwg4TaCSMDpIQkHltAk+uuhfa1lYf47935FAk4MSTighAhy22+vPCXR0aMPR0sjAaeLJBxIQgRB
+        FIRBnCtvjBeR6chry4Z0JeCRQ/sXj/3xZ7Pl2NEn3XIZAkk4gIQIcs0d558hUYyIQwgIklASJouhJOSK
+        Fk+kOhGHEhAkoSRMFkNICCaid07nicjfsPka0rWAIAklYbIYSkIwEWMy4pACgiSUhMliSAnBRFyXEa+6
+        6W2DCwhI+NSje2aLJEwYQ0sIdSKCZcWQPgUUaZGECSSEJhFDJOC0kYSJJIQYESXg9JGECSUEE3Hoc0CR
+        D5IwsYTgZUQJOB8kYQYSQpgRJeC8kISZSAgmogScF5IwIwkB+STgvJCEmUko5ocklIQiMZJQEorESEJJ
+        KBIjCSWhSIwklIQiMZJQEorESEJJKBIjCSWhSIwklIRiC+wKp1i8dUjCCUrIweZZNd400R08EoNrfdvw
+        8J9/ccZ6JOHEJERAHpPI7VApn5syB/ii4/Yzu/OlCeb93p5Lz8iIknBCEpqAHGyeU/O1W9/rzie6wSS0
+        e0Cb4Jh4d8hIwolIaALyjWsHnf+v273InV9sjyTsKKYgoSegQSXhh2SqB15sj0noPR3Pg+MjCZ0Yu4R1
+        AvLe9bsXZ5u9xw4Sco6HWN/65dm1fHvPe4r5+Fk8SViJMUvYJCBNUWXAfqF8j790ZHHPCx9c/OqFt65l
+        34sfK+bzjockHKmETQKSASXgMLSR0F1eEo5PQgmYF5Jwy0ghIYJsKkmTgNs0QRlXnCteecQiCbeMoSVE
+        EDIVV0+0laVJwG0yoH6VqZ2IlLOBXL9/8XOLe1+4cLHnuQ8V3PrkWwqqEtoy4bq2lfC1117doQe8+v46
+        soshJaTwEQVh6NrmEqbqAVkH8/XZCSMJ6yWkbK18OW70ctLbyS8wM0TBMfCOTQjzWg8p6+Azbb3bSMh6
+        qU/Ureo0j+xiKAlZzgS0g8L/fz20r1EepjdlwG0ztCQ8U0IThKEIxKkKx/+xY4Rg89vywDpZ930P3F4I
+        Bl79M0IJyYAsz3pYP39jRMwuhpCQAxkWVgjv1Yk4hIAgCU9LSJnz+v79N5w6btBGuFhCKbnM8NqbL1vc
+        fvt318oYSsj8LBeuj9dNImYXQ0nIAV13iRMHwhMxRsDqMpsiCU82Dcl6nF9RvtCHeHXweXD1Ty5yZQwl
+        XG7rjlen2G5OT2y+KtnFEBJCjIhUAJMqRsAuMqBBJTx44IHZwv5beXtlPjTrZAwlhE1EzC6GkhAQi15R
+        r9AocP6aiENlwDlDGQJfjpR/DvJVMRlpplIPqxLCr//yqbV1xRMxuxhSQrCDvk5E2vkSsH8oQ77w1p2r
+        b4pJY3jzbALruuqmtxVZMRSKoRGGQBgO8ZbzRMwuhpYQqADrMiJ4B08Cdgdl+NAzu0WZbioKy7E8cBz5
+        iyR8iYbwHvMyj8237WcyvIFMJqDRJCK9qZIwgIpQd44YQiF6d2SL9lCGtDRiyr2KyWSVmuNHh9p/Xz1B
+        BUeMtcE8ZF6W4ViG6/I+qw6W466MUMAmEVnm2CsHJWEVKkRdRgQJ2B0cO1oTbSs+83OMGGhHuibhYoN1
+        8YVgGc777HUwP01prtLxRAzXx/8mIGQXKSWEuoxI4UnA7mh7/mfZClHIZLHxlWuuX1z+5W+Ur+KCAXs+
+        q+32eSI+/a+vk3WLXtOqgJBdpJYQvIwoAbuF8zMqbViJ12HyUf7LCowjreKzV1y1uPjSL5Sv4gPRybZ8
+        duy2AvtmF5A/+NInWFUh2zLTFkMY9trILnKQEMKMKAG7g+NFtoit1JQ9nSmcv20am0powWezDW2yIvPT
+        UbOMM6Srkl3kIiGYiJz0S8DtoQzbnAPyBVjejbBVIOH5l3y6fLV5tOlA4kuGL+5luOKFZBc5SQhUHAm4
+        PZShXX7mVdoQKjDz0VHSRdy7d29BF8FwBNsWk8mZj+bsMlz5jOwiNwnF9iAglTcmi1C5YZNzv6GCbbNt
+        rW5/FfZ5ue+ufEZ2IQmnB9eBxlRY5uFcqk3PZ6pgWCS2d5d5ll9EroCQXUjCaUEW5DywSUKbPgYBw4jp
+        ZGI68y1DEophQUAuR4tphjJP2ATt6hyu6zh87OWik+f4if8Ur8mIdimct18G+7csC0kohoVjQwX1KmVI
+        ed60rI8n49EDzy9r5tlFr2ZOgXhnnfvRxc7Z5y2eOni4fPfkeGJMsxRRl/NKQjEMZEGuOmmqnEz3hiFu
+        un13sfO6dxUidnVZ2jbBNrz+nRecIaAFPblNGT/YV0kohiHmXImrS9YFIr7vwx8/1fRLHWyPJ6DFulve
+        QphezYbZhSQcP2RBLnJoqpDV80AvcsiCscG2Nn3xUCbLFoIkFP0TWRmpu5OKmPFQpofZMLuQhOOGLMjF
+        701ZEEmnGk0Xp1M2YU9pdiEJxw0Scs1kRCUsKmyOcXzffYv//eNY+ap9cMF3XTakbMJxw+xCEo4bro6p
+        y4JUQIYtcgzEe/7yyxZPn/PGxYs3fqd8d7Pgov+6L6LyfFgSim6J6ZDJNQsiHfL96by3L55+15u2yoRE
+        05AF5bAsK0kougUJuWugqSmaU48nTU/Eg2cueHch4Mu7d5RTt4u6cmCaPXUtu5CE4wUJvQpnUPHKW3uS
+        x6mm51I65ANEPHDhB8o5to+mW7fIlMsoa35GIQnHC02wpqZoeHlaiiAL//3aa041PU3AIgsu3/v300+U
+        c24fTU1Spi3nKWt+RiEJx0nM+WDZGVFW0eGj2vQM4b2/ffmKcs5uoumaUqZxXphdSMJxgoRNzS+aoymC
+        7Pbsxz+y0vSsQhbctjPGi7pbnXj/tt9eWdb8jEISjhMkrBsf5P2yI2KwqGt6hnTZGVONui8mygRJy6qf
+        T0jCcYKEdVeKUBG9uyX6imLIYSlXnXzA9C47Y6oRcw1tWfXzCUk4XtYJCOX5T1k1+w0b8/Okq8J8Jx7b
+        /HGKTUFHVJ2ETCurfj4hCccJx6Gpsg0xSM95XVXAfeedU2S78D3oozOmGk2XsDGtrPr5RO4S8iuyTz26
+        RzjkICHndmET9Kfvf8cpkDGUkOZqH50xYTQN20jCDaj+rLM4TayE/DYEN+vyrBb+8rqroCPGJES6UEII
+        Bdz2+tAweMI3+2P79LtHHi/er2uigyTcAK/yiZPESsgd6ohn8LqrQKwYCbvujAn3hx+f4Q78mGfPSMIN
+        8CqfOEmshH0GA/LheGAooDVHmd5nZ4yFJOwJr/KJk+TSO0qWC88LQ3j/4CcvKefsN5AQybzyMCThBniV
+        T5zEq2QGEg71OAs6WxDRxgkNXvN+350xFlyi1yQh5VJW/XwidwmFD4P1TZdoDX3FDD2lDEGQ+fjb11Ux
+        66KpZxS4wbms+vmEJBwnSNh0LyHT5hRNV8vYF1NZ9fMJSThOkLDpYb80zZhvLhHzrB0u5Surfj4hCccJ
+        cjU9ZY1pqe8nHDLqygKYTpmVVT+fkITjhUu06ioeWSGXO+v7jphOGabzsKfsQhKOF7Jh0w/AIOmYnqq9
+        acT8DgcSLqOs+RmFJBwvSMjvMTSdB82hSdr0c2lMs9+0zy4k4XiJOS+k8uX63NGuInZ8kLJaRlnzMwpJ
+        OH7qMgBQQaecDZsegw9IaL9HkV1IwnET0yQ1phh8uTRlwbApCtmFJBw/MRWRTDDUtaRDhrevVcqWQCEg
+        ZBeScPyQDVs0yYrKO4VoetqcQbksQxKK/ojpoAEq4/W7F1Mh3Th87OVO7zXcNup+MTimMwYok2XZnBIQ
+        sgtJOA0QsWnMEKi43n2GVPizzv1o8bv1yJg6GNtke/gNfS+ahiQM5lmuSxKK/rFsGJMdmIdMYoF0hYBn
+        n1f7G/FDB1mZL4WqiFwFFNMMZZ7lefCKgJBdSMLpEHtuyHSw80OyIM9qyUlAi0LEnTefeoZM7BcN+1eO
+        j0pCMSwx99SBVdIxdNRY87jpB19CmI8ff1kuJgnFsJANGTecmoixXy7AfOG4YJXsQhJOD45Rm44LCM8R
+        c4s2GRDYH7s6xiO7kITTpE3mACr5EE9naxtsUxsBmffo0Ydd+YzsQhJOE5qlXCHTtgJ3cf+hPZh326BZ
+        3Xb7y4dbufIZ2YUknC6IGHtVicG8NOfIpJsGQwqIuGlwszLN6bbbjbTLcMULyS4k4bRBxNhxtRDLiizf
+        NjaVkA4iy34x57MG+1ZeCeRKVyW7kITTB5HoLWwrIiIgBGK06UFt2xxl3TQj+ay228j85aMdXeE8sgtJ
+        OA8sI1LRvcpcB8u0+cFRxvViLn0z+ZC9rXzAMnVDEevILiThfEBEyzhepa6DCg+IzK1TmzRTuR6UoRA6
+        jHhw8SaZzwi+GFzR6sguJOG8QB57SG6b8y7DshYS0HlCUxAZWCeXlDGkYPCa92nO2tPCTbxNPttgHay7
+        Klcs2YUknB+ISO8n15lumokMk7IO5tlGOsPWs8ymrlyxZBeScN7YeWIXkvQJ20c2pS5WpWpLdiEJ502X
+        WbEPkI9m749u/epi986bC6pStSW7yF3CI4f2iwGgrDl/o+JbE7IqxJDw+XDtzZcV9Q/57G9VqrZkF7lL
+        6P0un+ieY0efLLIix5dODzLj0M1UE4/MV5XPkISScLIgoZU5MgJDEfRsIkhf2ZF12rqv/slFK81Orx5K
+        Qkk4WUIJQ5CRvww5ICRZyoYZTJ4YOW0+W4518D7rJPNSt9aJFyIJJeFkWSehYdkRuMAacRj4p3eVXkua
+        rwgaCsf/vMc05mFelmFZ1hGuc/9Ddxd1zKt7IZJQEk6WJgmrhAIZNo11ec1bb16gTklCZ2erpJLQ68kT
+        3XLwwAOtJewSSZi5hGL6SEJJKBIjCSWhSIwklIQiMZJQEorESEJJKBIjCSWhSIwklIQiMZJQEorESEJJ
+        KBIjCSWhSIwklIQiMZJQEorESEJJKBIjCSWhSIwklIQiMZJQEorESEJJKBIjCSWhSIwklIQiMZJQEorE
+        SEJJKBIjCVtISEFRYEJ0jSR0dtaDArjnNz8TonOoW16dqzJ7CYH5hegar655SEIhEiMJhUiMJBQiMZJQ
+        iMRIQiESIwmFSIwkFCIxklCIxPQv4c7O/wF4aZ8tW8G4lwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="picEstado.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFkAAABvCAMAAACw9pwtAAAABGdBTUEAALGPC/xhBQAAAm1QTFRF////
         8vX33eTo09zizdfe2uHm7PDz4+js1t/k/Pz97/L13OPo0Nng+fr72eHm0Nrg6e3x4ObqurevtbKpvsC9
@@ -149,27 +236,60 @@
         NcLmn0YRNpvivzRbWFhYWFhY/CY22y9hKaRe4y759gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picAbrir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFoAAABWCAMAAAB4tHFLAAAABGdBTUEAALGPC/xhBQAAAbBQTFRF////
-        /Pz95uvv2uHm0Nrg7PDz1t/kzdfe4Obq5uvu+fr70Nng4+js3OPo4+ns8vX37/L1t7SsuLavxcrLv8G/
-        zNXbwsXFqqedrKqhxs7SwsjKtrOrvL++t7m1x87SxMvOtrOo3tvM0NjbxsO27era1dzd5eLP5ODNzsmu
-        08612ta/mcLoi7rkN4jRkr7mldL/Y6XfirrkmsPoSLH/Zqjhr8/tdp2+aKzmTbP/iL/scJe3YqvnteD/
-        Xqnm+fz+fqXEv9nwkrnVwNnwzer/39vGPZfiULT+3fD/uuL/x+f/wdrxjM7/T7T/j6a3h56tiJ6sjbLL
-        nLK+havCOInRuM7XOYnRuc7Xl7zRlLLFus7Xr9XojKq7OorRus/YO4rRu8/Yn73MPIrRvNDYv9rkutnl
-        29fAia/JPIvRvdDYutjmgqjAPYvR49/MjbPPPozRvtHYv9HYP4zRms3tbbjuQI3RwNLYwdLYns/swtPY
-        e63UX6PbTrP+p8zhhrPVYaTawNrkWZrTjsDj4+bcqMXX1tK6zdC+Z7v3Y6ngtMvX4uTZpMHHesLy5+TS
-        6ufW39zNrKmgwYE1ywAAAm1JREFUWEft1Wdz0zAAh3G7CbhswgpQdkOYooDYq+wO9t67jDIKtOxN2fsr
-        V+OfxHbkIVVXXsTPi9Sy5N/p3DvLyWqw3KZcPp8bhZHN3NGeKIexxZql7HljcMNaY7k6jv/kccda4xna
-        7LgT2B+723Yn8v1OcpzJfNtNLm5rVqhvylQOe960QkFeTZ+BGX94PqZiXTNnCY81u3aFuVoteD4mrPQ1
-        B1yguZisZkTPgxZoPiarpaMXLAwELNgiTMpaU9OlQMBCYVLWWPRiZZiUmdIpyuhQGR2qUejyktiwimVA
-        L41rGVaxDOjlsWEVawTe9QpBRDUceiVZJRF1w6DbVhOyBowqY3ptG6XryHowqkzpDWTjJko3Q1FmSG8h
-        hGyl24CoM6O5TMj2HUDUGdHtQiY7YURkQu+S8m5nDxB1frq8Nzasgrxvf0cn7YKiLEDja6Gu8g3BnrsP
-        HKQaNLYXkVwE+ZDTmSBrv2vIh1sSZV0a8pHi0URZk4Z8rHg8WdajpXziZGsaWYuW8qnTpTOUnsXzMWnQ
-        kM+VzlN6weopI+WLl4Rs9QCT8uUrXL5q9WyU8rXrpRuU9lTOxvj8dPlmZLeEfPsOW9XbUzkbEwrQ+FrU
-        d1fI97jMM6DvR/RAyH0Psc6Ajkq+575HGFqkpfy4Jluj+we4/OQphjxLdD+l3H6GocgO/ZyyBsgLDGV2
-        6JevGP36DUbICv2WkHeUvseokhX6A3vNH3sxqGaDHmTyJ1z70qfLn0N9+frt+w9M+jOg8cWo9vPXIKaC
-        6dO/6/qDmVBW/o3qMjpURodKT//VLTVt1P+l/xmWgs7KGpEcZwjvP2yb3n1niwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAANAAAADyCAYAAAA8wEtJAAAABGdBTUEAALGPC/xhBQAAC81JREFUeF7t
+        3c2OFNcZh3Fuw3eQC4jkPatkEdZZxDtvIy/YWWIRWSLZkI0lL0wIkj2CJLaDcJAgcURCBAaUeDBmZiDD
+        wEQo4UsYGUVJvKv0v+EMRfVb1VX11qmqU/0sfjLU9NcU5/E5XV3dvS/LMvTgP//7Nnv09Tem4mWRDnMj
+        unP73oPsi5t3s6sbO3P6c17YLrps8foYN3Mj/EIcxWCWCdcp3h7GydyI9jSLtAmniJDSYG5EO8UIuqCQ
+        iveD8TA3orkuZp0yRDRe5kY0EzOegIjGydyI+vqIJyCi8TE3oh5rkPeh+DgwHHMj6ulz9gmYhcbF3Ijl
+        rMHdp+LjwTDMjVhuiNknYBYaD3MjqoXTc5rSwM+HV/x7E5z2Mw7mRlSzBnQdxdsJrMvWUbwd9M/ciGpt
+        Zo3ibRRZ16mix1C8DfTP3Ihy1mCu0mSgxwgTcZkbYWtzomiT5yptnlvxXGhY5kYsahNPm2VWm1mIiIZj
+        bsSrNEjbDOy+AgqKt4X4zI14uZzyDOi+AwrXZUbqz77Ll85neG5z49p88HkGcdFfrv7VvC+LLmvdRhvh
+        d9DvZN3XqtDvXxz0Xdp3cu39DO9nf/78ysIg7IIGsnV/li7DzVOYvzl5zLzPqfv92VOzcW4P/i7s045d
+        VdrBZ06fMAddlxSn7st6DKKfdTn7lNFgqnocU0NAEYWdaw20GMpmAW3rI55glSLS70lAkfQx81gUi2Yk
+        6TOcvFWJiIAisgbWKrH2ydQQUATaqUP9n39MtA+mPgsRUATaodaAWkVTX8oRUMe0Q2MdKk5ROMRu7asp
+        IKCOMfss0j6x9tUUEFCHtDN57rNoys+FCKhD2pnWAMJdAnJoFZAeWGqGet0nBdo31j4bK2tMWnTZ0QWk
+        nX3h/Onk6MRCa/Dg7nzfWPtsrDQGrbFZNLqA9IA2v7qYPXt6Jznbuxx9K6N9Y+2zsdIYrDMTjTKgr65d
+        yL5+vJ0cAiq3tXPH3GdjRUADIKByBNQeAYGAHAgIBORAQCAgBwICATkQEAjIgYBAQA4EBAJyICAQkAMB
+        gYAcCAgE5LBSAektzFhEQO2tTED376OKtc/GioAABwICHAgIcCAgwIGAAAcCAhwICHAgIMCBgAAHAgIc
+        CAhwICDAgYAABwICHAgIcCAgwIGAAAcCAhwICHAgIMCBgAAHAgIcCAhwICDAgYAABwICHAgIcCAgwIGA
+        AAcCAhwICHAgoIYeP9jCCFj/NkMgoIZu37yQrV/9LQY2logIqCECGgcCWkRAqI2AFhEQaiOgRQSE2gho
+        EQGhNgJalERAon88DMv6dxkCAQEOBAQ4EBDg0FdAP3h3Mzt3/cnsj/bPhYCQnD4CUjzfeed69tqh9ezk
+        5YezTfblCAjJiR2Q4nn9Z9f3VEVEQEhOzICK8eQjOvqnf80u8urlCQjJiRVQWTyBlnQ/P3tvdtGX1yEg
+        JCdGQD889Sx7/fC6GU6eIjr0yd3ZVZ5fj4CQnK4D+tG5LPve6Sw7sPawcUQEhOR0GVCIR77/u+YRERCS
+        01VA+XjyEdVZzikg3QYBITldBGTFEygiscKREI8QEJLTJqA3jt6aH4rWn3/8x2+z735sxxMoIP13/5FX
+        4wm3ERAQklM3IFFAikezRpg9Dn76aC+QKmEmChHlZx4CQrKaBHTgyJW9ePbMnt/oeU6TiHS9YjxCQEhO
+        3YAUzyvh5M0i0hG3OhFpuZePJo+AkJw6AVXGE9SIqCoeISAkZ1lAteIJZhHtP/7YjGhZPEJASE5VQI3i
+        CYyI6sQjBITklAXUKp4gF1HdeISAkBwrIFc8wYuIipFUISAkpxhQJ/G8oEPe+bOtlyEgJCcfUJfxBMWz
+        DaoQEJITAooRjxQjqUJASMqzp3fmAY0hHiEgJOXfT7ezN4/dWDw9x8k6z60OAkIyNPvEiEeKYdRFQEjC
+        GOMRAsLodb5sO/zy3abFIJoiIIxap/G8eKF07sjyePSu1fzfLQSE0ep02ZY7VUeWxRHe8j2Js7H13TT/
+        2LmCgfX5HUExlm3hRNFAIeVjCIqfl1AVURIB8Q1149BXQFEOVb+YgfJhSHEmKsYTlEVEQKitj4Bivc4j
+        GvDWB4qEiMriEQKCW+yAYscTWBEV/55XFo8QEGqLGZDieeuD+PEEdT7aSqriEQJCbbECijnzfHLm7Gyc
+        24NfEVnRBMvikSQC0hGgjS/PYmAxAoo58/ziw7XKj/atCqhOPJJEQJim2PFozLb5aN+68QgBYRB9xKPx
+        agXUVTxCQOhdH/GE8VoMqMt4hIDQq77iCeM1H1DX8QgBoTd9xhPGawgoRjxCQOhF3/EECqiLo21lCAjR
+        DRWP6FsYrHDEG48QEKKacjxCQIgmWjyH10cRjxAQoog581y+dN4cn0Ff8QgBoXMx49ne3TE/GzvoMx4h
+        IHQqdjzhgxWtgPqORwgInYkZz+69v8/j0f1YAQ0RjxAQOqF43v5V3Jkn3FcxoKHiEQKCW+x4dPv5+8sH
+        VBWPvPfZrdk4twd/FwgILn0t2/JCQFXx6BN33vn159mF87O/GAO/KwSE1mLOPGXxhIMIy+L5yUd/y06d
+        eM98O0OXCAitDBFPuN+qc9vy8Wi8EhBGZ4hlW1A3njBeCQijMtTMI03iCeOVgDAaKSzbiuOVgDAKKc08
+        +fFKQBhcrHj0FSOx4gnjlYAwqNSWbXkEhEENFY+2V8Ujy+IRAsJgxrpsE52esyweISAMYqh4li3bdGLo
+        2vqT+WelayxaYzSPgNC7oZZtdeP579Ob5tsZLASEXo112ZaPR5clIIzOkPHo5zqqViceISCMylDLtkA/
+        tyKy4hECwmgMOfPk6XL372/vRVQWjxBQQ3zBVhxbX3yUHTx+cfB4gvxMVBaPEFBDfMVj92LFI23iydNM
+        pJnR+pkQUEME1K2Y8Wjwe+Kpg4AaIqDujG3Z1gYBNURA3ZhCPEJADRGQX+rLtjwCakhH4eATa+bpOx4h
+        IPRGR7N06n/qy7Y8AkIvYsUjQ8w8AQEhupgzz5DxCAEhqiku2/IICNFMddmWR0CIYsrLtjwCQudWJR4h
+        IHRKZy2vSjxCQOiM4nn36jfZ/uOP51//boXQxljjEQJCJ7RsUzx685neQ3Ng7WEnEY05HiEguIWZR/GE
+        t0B3EdHY4xECgosVTxcRpRCPEBBayy/bivEEbSJKJR4hILRSNfMUNYkopXiEgNBYk3iCOhGlFo8QEBqp
+        s2wrUxaRXjNKMR4hIDSiEzitOOqyIko1HiEgNKIZaHt3Zz4DKQYrkmVCRCnPPAEBoTbFc3VjZz7oNYPo
+        jANvRCnHIwSEWhTPxxe3stcO5Z6/OCLSdcbwfh4vAsJSZjzOiKYQjxAQltJznsqzq2cRKYq6Een2FKV1
+        X6khIFTSQH/z2A07nLyaM9HWzp3JxCMEhFJaYumggbl0s1TMRDpqd+n2PycVjxAQSmmwN/6+HiOiqcYj
+        BIRSGvCt3ln6Yjk39XiEgFBq6cGDErqOrqsv6z13/clk4xECgik8/2kakJ4v6ZC3otFtTDkeISCYNPgV
+        QpOAFM8v/7A5+WjyCAgmRdBkBtLlwsxj3d5UERAWKAI9hzn46aPKgPQzzTpvHL01qRdHmyCghh4/2Jo0
+        RaAXO3UETUfSdEQtxJKnbW99cGM+S61iOAEBNTTlb6jTN8edu3h+7/WbEJHouY1omabAtC8UzhTOZ/Mg
+        oIamHFAxnmBt/cn8bdwEs4iAGppyQMVTcPQiqN6+vcpLtGUIqKEpB2TFo5nH2g94joAammpAev7z08/u
+        zsNRQMw89RBQQ1OegWTjy7Pz35N46iGghqxDv1Nj/d6wERDgQECAAwEBDgQEOBAQ4EBAgAMBAQ4EBDgQ
+        EOBAQIADAQEOBAQ4EBDgQECAAwEBDgQEOBAQ4EBAgAMBAQ4EBDgQEOBAQIADAQEOBAQ4EBDgQECAQ9IB
+        6cHr+2qAoSQbkJw5fQIYnDU2i0YZEJAKAgIcCAhwICDAgYAABwICHAgIcCAgwKGXgHQnwFRFD2hz41oG
+        TNX27s5snNuD3y/b93+fJ3EOsV1giQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
