--- a/tablesoft-net/TableSoft/TableSoft/Properties/Resources.resx
+++ b/tablesoft-net/TableSoft/TableSoft/Properties/Resources.resx
@@ -139,4 +139,13 @@
   <data name="InicioSupervisorReporte" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\InicioSupervisorReporte.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Eye" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Eye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EyeMouseDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\EyeMouseDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EyeMouseEnter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\EyeMouseEnter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
